2015-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc, info/t/Init-inter.inc, info/t/*.sh:
	Revert split of GINFO variable from yesterday.

	* info/t/Init-inter.inc: Wedge pipe for input key presses open 
	for reading as well as for writing.
	* info/t/Timeout-test.inc: Try to detect if "read -t" works by 
	running it in a subshell.  If exit status of "read -t" is 1, 
	report that an end-of-file was likely.

	* info/man.c (get_manpage_from_formatter): Ignore exit status of 
	man page formatter.

2015-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc: Split GINFO variable into GINFO and 
	GINFO_OPTIONS, and provide GINFO function to use them together.
	* info/t/Init-inter.inc: Pass GINFO_OPTIONS variable as 
	arguments to GINFO.  (Attempt at fixing error message on
	Solaris 10, "./ginfo --init-file ./t/Infokey-config: not found".  
	Maybe word splitting isn't happening.)
	* info/t/*.sh: Use GINFO alias instead of $GINFO.

	* info/t/Init-test.inc: Remove portability code for "local" 
	builtin.  It doesn't work.
	(findprog): Don't use "local".

2015-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/index-apropos.sh: Don't run printf in background to 
	pass input keystrokes into program.  (Attempt at fixing test 
	failure reported by Assaf Gordon.)
	* info/pseudotty.c: Include sys/select.h for fd_set and others.  
	Reported by Assaf Gordon.

	* info/pseudotty.c: Log bytes received from control channel, for 
	better trouble-shooting.

	* po/Makevars: Escape "$" in XGETTEXT_OPTIONS.  (Attempt at 
	fixing build failure on FreeBSD 9.3, reported by Assaf Gordon.)

2015-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc: Copy shell portability code for "local" 
	builtin from util/texi2dvi.
	* init/t/Init-test.inc: Use "2" as argument to "trap" instead of 
	"SIGINT" for portability to Solaris, among others.
	* init/t/empty-infopath.sh: Set and export variable separately.